# django_docker_template

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
django_template/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
