[tool.black]
skip-string-normalization = true
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "django_template"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_template"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
redis = "^4.5.5"
psycopg2-binary = "^2.9.6"
celery = "^5.2.7"
gunicorn = "^20.1.0"
django-postgres-extra = "^2.0.8"
mypy = "^1.3.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
